--- a/package.yaml
+++ b/package.yaml
@@ -16,6 +16,9 @@ ld-options: -fuse-ld=gold
 
 dependencies:
   - base >= 4.7 && < 5
+  - Chart
+  - Chart-cairo
+  - data-default
   - time
 
 executables:
